--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
 html, body, #root {
     font: 0.9rem sans-serif;
-    background: #0a1f44;
+    background: #544f6b;
     color: #1e2432;
     height: 100%;
     margin: 0;
 }
 
 .main-container {
-    background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.418) ), url('https://hdwallpaper20.com/wp-content/uploads/2017/07/wallpaper-wp4001752.jpg');
+    background: linear-gradient( rgba(139, 92, 92, 0.3), rgba(0, 0, 0, 0.418) ), url('https://hdwallpaper20.com/wp-content/uploads/2017/07/wallpaper-wp4001752.jpg');
     background-size: cover;
     background-position: center;
 }
@@ -37,6 +37,7 @@ html, body, #root {
     padding: 40px 8%;
     border-radius: 20px;
     background: rgba(250, 250, 250, 0.85);
+     background: #ffffff; 
     box-shadow: 10px 10px 5px 0px rgba(15, 15, 15, 0.404);
 }
 
@@ -70,7 +71,7 @@ p {
     background: #ff8c00;
 }
 
-.city-icon {
+.egg-icon {
     margin-top: 10px;
     width: 100px;
     height: 100px;
