--- a/src/components/Nutrition.css
+++ b/src/components/Nutrition.css
@@ -101,13 +101,28 @@ p {
 	border-radius: 20px;
 	position: relative;
 	margin: 15px 0;
+    margin-left: 15px;
 	height: 30px;
 	width: 300px;
 }
 
 .progress-done {
-	background: linear-gradient(to left, #F2709C, #FF9472);
-	box-shadow: 0 3px 3px -5px #F2709C, 0 2px 5px #F2709C;
+	background: linear-gradient(to left, #09d73c, #c8efcf);
+	box-shadow: 0 3px 3px -5px #8aab8d, 0 2px 5px #9fe3c1;
+	border-radius: 20px;
+	color: rgb(222, 245, 222);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+	width: 0;
+	opacity: 0;
+	transition: 1s ease 0.3s;
+    font-weight: bolder;
+}
+.progress-over {
+	background: linear-gradient(to left, #e6316d, #f6b7a4);
+	box-shadow: 0 3px 3px -5px #F2709C, 0 2px 5px #e6abbe;
 	border-radius: 20px;
 	color: #fff;
 	display: flex;
@@ -117,6 +132,7 @@ p {
 	width: 0;
 	opacity: 0;
 	transition: 1s ease 0.3s;
+    font-weight: bolder;
 }
 
 
