--- a/src/components/Nutrition.css
+++ b/src/components/Nutrition.css
@@ -120,7 +120,7 @@ p {
   font-weight: bolder;
 }
 .progress-zero {
-  background:  #a1562a;
+  background: #a1562a;
   box-shadow: 0 3px 3px -5px #f9bc7f, 0 2px 5px #9fe3c1;
   border-radius: 20px;
   color: rgb(37, 101, 37);
@@ -151,6 +151,47 @@ p {
   position: absolute;
   top: 0;
 }
+
+.popup {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ded0d8;
+  opacity: 0.9;
+  z-index: 2;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.popgood-inner {
+  position: relative;
+  padding: 32px;
+  width: 100%;
+  max-width: 500px;
+  background-color: #a3e8ac;
+}
+.popgood-inner .close-btn {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+}
+.popbad-inner {
+  position: relative;
+  padding: 32px;
+  width: 100%;
+  max-width: 500px;
+  background-color: #e34d4d;
+}
+.popbad-inner .close-btn {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+}
+
+
 
 @media only screen and (max-width: 600px) {
   .search {
